src/lib.rs

    pub fn HPDF_Page_CreateURILinkAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                        uri: *const ::libc::c_char)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateTextMarkupAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                           text: *const ::libc::c_char,
                                           encoder: HPDF_Encoder,
                                           subType: HPDF_AnnotType)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateHighlightAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                          text: *const ::libc::c_char,
                                          encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateUnderlineAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                          text: *const ::libc::c_char,
                                          encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateSquigglyAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                         text: *const ::libc::c_char,
                                         encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateStrikeOutAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                          text: *const ::libc::c_char,
                                          encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreatePopupAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                      parent: HPDF_Annotation)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateStampAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                      name: HPDF_StampAnnotName,
                                      text: *const ::libc::c_char,
                                      encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateProjectionAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                           text: *const ::libc::c_char,
                                           encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateSquareAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                       text: *const ::libc::c_char,
                                       encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateCircleAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                       text: *const ::libc::c_char,
                                       encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_LinkAnnot_SetHighlightMode(annot: HPDF_Annotation,
                                           mode: HPDF_AnnotHighlightMode)
     -> HPDF_STATUS;
    pub fn HPDF_LinkAnnot_SetJavaScript(annot: HPDF_Annotation,
                                        javascript: HPDF_JavaScript)
     -> HPDF_STATUS;
    pub fn HPDF_LinkAnnot_SetBorderStyle(annot: HPDF_Annotation,
                                         width: HPDF_REAL,
                                         dash_on: HPDF_UINT16,
                                         dash_off: HPDF_UINT16)
     -> HPDF_STATUS;
    pub fn HPDF_TextAnnot_SetIcon(annot: HPDF_Annotation,
                                  icon: HPDF_AnnotIcon) -> HPDF_STATUS;
    pub fn HPDF_TextAnnot_SetOpened(annot: HPDF_Annotation, opened: HPDF_BOOL)
     -> HPDF_STATUS;
    pub fn HPDF_Annot_SetRGBColor(annot: HPDF_Annotation,
                                  color: HPDF_RGBColor) -> HPDF_STATUS;
    pub fn HPDF_Annot_SetCMYKColor(annot: HPDF_Annotation,
                                   color: HPDF_CMYKColor) -> HPDF_STATUS;
    pub fn HPDF_Annot_SetGrayColor(annot: HPDF_Annotation, color: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Annot_SetNoColor(annot: HPDF_Annotation) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetTitle(annot: HPDF_Annotation,
                                     name: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetSubject(annot: HPDF_Annotation,
                                       name: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetCreationDate(annot: HPDF_Annotation,
                                            value: HPDF_Date) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetTransparency(annot: HPDF_Annotation,
                                            value: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetIntent(annot: HPDF_Annotation,
                                      intent: HPDF_AnnotIntent)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetPopup(annot: HPDF_Annotation,
                                     popup: HPDF_Annotation) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetRectDiff(annot: HPDF_Annotation,
                                        rect: HPDF_Rect) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetCloudEffect(annot: HPDF_Annotation,
                                           cloudIntensity: HPDF_INT)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorRGBColor(annot: HPDF_Annotation,
                                                color: HPDF_RGBColor)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorCMYKColor(annot: HPDF_Annotation,
                                                 color: HPDF_CMYKColor)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorGrayColor(annot: HPDF_Annotation,
                                                 color: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetInteriorTransparent(annot: HPDF_Annotation)
     -> HPDF_STATUS;
    pub fn HPDF_TextMarkupAnnot_SetQuadPoints(annot: HPDF_Annotation,
                                              lb: HPDF_Point, rb: HPDF_Point,
                                              rt: HPDF_Point, lt: HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_Annot_Set3DView(mmgr: HPDF_MMgr, annot: HPDF_Annotation,
                                annot3d: HPDF_Annotation, view: HPDF_Dict)
     -> HPDF_STATUS;
    pub fn HPDF_PopupAnnot_SetOpened(annot: HPDF_Annotation,
                                     opened: HPDF_BOOL) -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_SetLineEndingStyle(annot: HPDF_Annotation,
                                                 startStyle:
                                                     HPDF_LineAnnotEndingStyle,
                                                 endStyle:
                                                     HPDF_LineAnnotEndingStyle)
     -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_Set3PointCalloutLine(annot: HPDF_Annotation,
                                                   startPoint: HPDF_Point,
                                                   kneePoint: HPDF_Point,
                                                   endPoint: HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_Set2PointCalloutLine(annot: HPDF_Annotation,
                                                   startPoint: HPDF_Point,
                                                   endPoint: HPDF_Point)
     -> HPDF_STATUS;
    pub fn HPDF_FreeTextAnnot_SetDefaultStyle(annot: HPDF_Annotation,
                                              style: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_LineAnnot_SetPosition(annot: HPDF_Annotation,
                                      startPoint: HPDF_Point,
                                      startStyle: HPDF_LineAnnotEndingStyle,
                                      endPoint: HPDF_Point,
                                      endStyle: HPDF_LineAnnotEndingStyle)
     -> HPDF_STATUS;
    pub fn HPDF_LineAnnot_SetLeader(annot: HPDF_Annotation,
                                    leaderLen: HPDF_INT,
                                    leaderExtLen: HPDF_INT,
                                    leaderOffsetLen: HPDF_INT) -> HPDF_STATUS;
    pub fn HPDF_LineAnnot_SetCaption(annot: HPDF_Annotation,
                                     showCaption: HPDF_BOOL,
                                     position: HPDF_LineAnnotCapPosition,
                                     horzOffset: HPDF_INT,
                                     vertOffset: HPDF_INT) -> HPDF_STATUS;
    pub fn HPDF_Annotation_SetBorderStyle(annot: HPDF_Annotation,
                                          subtype: HPDF_BSSubtype,
                                          width: HPDF_REAL,
                                          dash_on: HPDF_UINT16,
                                          dash_off: HPDF_UINT16,
                                          dash_phase: HPDF_UINT16)
     -> HPDF_STATUS;
    pub fn HPDF_ProjectionAnnot_SetExData(annot: HPDF_Annotation,
                                          exdata: HPDF_ExData) -> HPDF_STATUS;
    pub fn HPDF_Page_Create3DC3DMeasure(page: HPDF_Page,
                                        firstanchorpoint: HPDF_Point3D,
                                        textanchorpoint: HPDF_Point3D)
     -> HPDF_3DMeasure;
    pub fn HPDF_Page_CreatePD33DMeasure(page: HPDF_Page,
                                        annotationPlaneNormal: HPDF_Point3D,
                                        firstAnchorPoint: HPDF_Point3D,
                                        secondAnchorPoint: HPDF_Point3D,
                                        leaderLinesDirection: HPDF_Point3D,
                                        measurementValuePoint: HPDF_Point3D,
                                        textYDirection: HPDF_Point3D,
                                        value: HPDF_REAL,
                                        unitsString: *const ::libc::c_char)
     -> HPDF_3DMeasure;
    pub fn HPDF_3DMeasure_SetName(measure: HPDF_3DMeasure,
                                  name: *const ::libc::c_char) -> HPDF_STATUS;
    pub fn HPDF_3DMeasure_SetColor(measure: HPDF_3DMeasure,
                                   color: HPDF_RGBColor) -> HPDF_STATUS;
    pub fn HPDF_3DMeasure_SetTextSize(measure: HPDF_3DMeasure,
                                      textsize: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_3DC3DMeasure_SetTextBoxSize(measure: HPDF_3DMeasure,
                                            x: HPDF_INT32, y: HPDF_INT32)
     -> HPDF_STATUS;
    pub fn HPDF_3DC3DMeasure_SetText(measure: HPDF_3DMeasure,
                                     text: *const ::libc::c_char,
                                     encoder: HPDF_Encoder) -> HPDF_STATUS;
    pub fn HPDF_3DC3DMeasure_SetProjectionAnotation(measure: HPDF_3DMeasure,
                                                    projectionanotation:
                                                        HPDF_Annotation)
     -> HPDF_STATUS;
    pub fn HPDF_Page_Create3DAnnotExData(page: HPDF_Page) -> HPDF_ExData;
    pub fn HPDF_3DAnnotExData_Set3DMeasurement(exdata: HPDF_ExData,
                                               measure: HPDF_3DMeasure)
     -> HPDF_STATUS;
    pub fn HPDF_Page_Create3DView(page: HPDF_Page, u3d: HPDF_U3D,
                                  annot3d: HPDF_Annotation,
                                  name: *const ::libc::c_char) -> HPDF_Dict;
    pub fn HPDF_3DView_Add3DC3DMeasure(view: HPDF_Dict,
                                       measure: HPDF_3DMeasure)
     -> HPDF_STATUS;
    pub fn HPDF_LoadPngImageFromMem(pdf: HPDF_Doc, buffer: *const HPDF_BYTE,
                                    size: HPDF_UINT) -> HPDF_Image;
    pub fn HPDF_LoadPngImageFromFile(pdf: HPDF_Doc,
                                     filename: *const ::libc::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadPngImageFromFile2(pdf: HPDF_Doc,
                                      filename: *const ::libc::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadJpegImageFromFile(pdf: HPDF_Doc,
                                      filename: *const ::libc::c_char)
     -> HPDF_Image;
    pub fn HPDF_LoadJpegImageFromMem(pdf: HPDF_Doc, buffer: *const HPDF_BYTE,
                                     size: HPDF_UINT) -> HPDF_Image;
